feat(android): add native work center screen and entry
- register NativeWorkCenterActivity in manifest

- add native screen activity/layout/list row and styling drawables

- update settings entry and related strings

--- a/animegen-android/app/src/main/AndroidManifest.xml
+++ b/animegen-android/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:theme="@style/Theme.AnimeGen"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.screen.nativeview.NativeWorkCenterActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
